<resources>
    <string name="app_name">Silir</string>
    <string name="description1">Connected via bluetooth, absolutely wireless</string>
    <string name="description2">Easy and instant measurement</string>
    <string name="description3">Integrated with cloud storage management service</string>
    <string name="get_staterted_button">GET STARTED</string>
    <string name="sign_up_tab_title">SIGN UP</string>
    <string name="sign_in_tab_title">SIGN IN</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password"><u>forgot password?</u></string>
    <string name="reset_password_warning">
        Make sure that the email address has been registered in our system before.
        We will send you an email that contains a link directed to your password reset form.
    </string>
    <string name="title_home">Home</string>
    <string name="title_measurement_data">Measurement Histoy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_help">Help</string>

    <string name="name_label">Name</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="gender_label">Gender</string>
    <string name="height_label">Height in cm</string>
    <string name="weight_label">weight in kg</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_label">Confirm</string>
    <string name="error_confirm_edit_text">Confirmed password doesn\'t match.</string>
    <string name="processing_label">processing...</string>
    <string name="sending_verif_email_label">sending verification email...</string>
    <string name="registration_failed_label">Registration failed.</string>
    <string name="storing_data_label">storing data...</string>
    <string name="success_label">Success</string>
    <string name="cant_send_email_label">Something went wrong, verification email couldn\'t be sent.</string>
    <string name="warning_label">Warning</string>
    <string name="sending_email_label">sending email...</string>
    <string name="email_sent_label">Email has been sent.</string>
    <string name="email_cant_be_sent_label">Failed to send email.</string>
    <string name="authenticating_label">authenticating...</string>
    <string name="login_failed_label">Login failed, please check your email/password.</string>
    <string name="express_yourself_label">Express yourself!</string>
    <string name="description_setting_photo_label">Set your profile photo,\nshow the world who you really are</string>
    <string name="save_label">save</string>
    <string name="taki_it_label">take it</string>
    <string name="select_photo_label">select photo</string>
    <string name="do_it_later_label">do it later</string>
    <string name="compressing_label">compressing...</string>
    <string name="uploading_label">Uploading</string>
    <string name="pp_updated">Profile picture has been updated.</string>
    <string name="failed_upload_pp_label">Failed to upload image.</string>
    <string name="cancel_label">cancel</string>
    <string name="choose_another_label">choose another</string>
    <string name="havent_pick_image_label">You have not picked any image.</string>
    <string name="ok_label">OK</string>
    <string name="measurement_profiles_label">measurement\nprofiles</string>
    <string name="current_measurement_label">current\nmeasurement</string>
    <string name="add_new_measurement_label">add new\nmeasurement</string>
    <string name="new_profile_label">New Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="result_label">Result</string>
    <string name="measurement_profiles_label_capt">Measurement Profile</string>
    <string name="id_profile_label">This profile was created on</string>
    <string name="height_profile_label">Height: %d cm</string>
    <string name="weight_profile_label">Weight: %d kg</string>
    <string name="exit_warning_label">Touch back again to exit.</string>
    <string name="header_menu_instruction">Instructions</string>
    <string name="header_menu_settings">Settings</string>
    <string name="header_menu_help">Help</string>
    <string name="header_menu_about">About</string>
    <string name="please_wait_label">please wait...</string>
    <string name="warning_empty_message">Message\'s content cannot be empty. Please type the message.</string>
    <string name="modify_name">Modify Name</string>
    <string name="hint_new_name">New name</string>
    <string name="updating_label">updating</string>
    <string name="failed_update_user_name">Failed to update user name.</string>
    <string name="success_update_user_name">Name is successfully updated.</string>
    <string name="modify_email_address">Modify Email Address</string>
    <string name="hint_old_email">Old Email Address</string>
    <string name="hint_new_email">New Email Address</string>
    <string name="reauthecticating_label">re-authenticating...</string>
    <string name="updating_email_address_label">updating email address...</string>
    <string name="success_email_update">Email address is successfully updated.</string>
    <string name="failed_email_update">Failed to update email address.</string>
    <string name="failed_reautheticate_label">Failed to re-authenticate user.</string>
    <string name="modify_password">Modify Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="updating_password_label">updating password...</string>
    <string name="success_password_update">Password has been updated.</string>
    <string name="failed_update_password">Failed to update password. Please try again.</string>
    <string name="hint_new_phone">New Phone Number</string>
    <string name="modify_phone">Modify Phone Number</string>
    <string name="updating_phone_label">updating phone number...</string>
    <string name="failed_update_phone_label">Failed to update phone number. Please try again.</string>
    <string name="success_update_phone_label">Phone number is successfully updated.</string>
    <string name="modify_dob">Modify Date of Birth</string>
    <string name="updating_dob">updating date of birth...</string>
    <string name="failed_update_dob">Failed to update date of birth.</string>
    <string name="success_update_dob">Date of birth is successfully updated.</string>
    <string name="updating_gender">updating gender...</string>
    <string name="failed_update_gender">Failed to update gender.</string>
    <string name="success_update_gender">Gender is successfully updated.</string>
    <string name="button_modify">modify</string>
    <string name="email_address_label">Email Address</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="overview_label">Overview</string>
    <string name="flow_volume_loop_label">Flow-volume Loop</string>
    <string name="volume_time_curve_label">Volume-time Curve</string>
    <string name="local_storage_label">Local Storage</string>
    <string name="cloud_storage_label">Cloud Storage</string>
    <string name="tittle_choose_profile">Choose Profile</string>
    <string name="button_next">next</string>
    <string name="choose_measurement_profile">Choose existing measurement profile:</string>
    <string name="or_create_the_new_one">or create the new one:</string>
    <string name="retrieving_mesurement_profiles">Retrieving measurement profiles...</string>
    <string name="setting_label_height">Height</string>
    <string name="setting_label_weight">Weight</string>
</resources>
