<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kahl.silir.getstarted.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/email_label"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/softBrightBlue"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress" />

        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/softBrightBlue"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_in_tab_title"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
</ScrollView>